kubernetes/apps/default/misc-ingress/app/ingress-internal-photoprism.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photoprism
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: photoprism.png
    gethomepage.dev/name: PhotoPrism
    gethomepage.dev/group: Media
    gethomepage.dev/description: Photo Management
    gethomepage.dev/widget.type: photoprism
    gethomepage.dev/widget.url: http://${SECRET_UNRAID_IP}:2342
    gethomepage.dev/widget.username: ${HOMEPAGE_PHOTOPRISM_USERNAME}
    gethomepage.dev/widget.password: '${HOMEPAGE_PHOTOPRISM_PASSWORD}'
spec:
  ingressClassName: internal
  rules:
    - host: &host "photoprism.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: photoprism
                port:
                  number: 2342
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: photoprism
subsets:
  - addresses:
      - ip: "${SECRET_UNRAID_IP}"
    ports:
      - name: http
        port: 2342
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: photoprism
spec:
  ports:
    - name: http
      port: 2342
  type: ClusterIP
